<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        style="@style/AppTheme.EpisodeDetails.Screenshot"
        android:id="@+id/episode_details_screenshot"
        android:src="@drawable/highlight_placeholder"/>
    <!--Eu posso colocar dp = px (designer trabalhou com medida que garante que 1px = 1dp -->

    <ImageView
        style="@style/AppTheme.EpisodeDetails.Screenshot"
        android:src="@drawable/overlay"/>


    <TextView
        android:id="@+id/episode_details_screenshot_Title"
        style="@style/AppTheme.EpisodeDetails.Screenshot.Title"
        android:layout_alignBottom="@id/episode_details_screenshot"
        android:text="@string/episode_details_screenshot_bottom_text" />

</RelativeLayout>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="64dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="16dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/episode_details_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/episode_details_clock_Title"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textColor="@color/default_textColor_second"
            android:text="@string/episode_details_cardViewTime_text"
            android:textSize="@dimen/default_textSize_medium"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="22dp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_height="24dp"
                android:layout_width="match_parent"
                android:text="@string/episode_details_cardViewSummary_Title"
                android:textColor="@color/default_textColor_third"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16.5dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/default_background_third"
                android:layout_marginTop="39dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/episode_summary_Description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/default_textColor_fourth"
                android:text="@string/episode_details_cardViewSummary_Description"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:paddingBottom="10dp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

</ScrollView>