<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_height="24dp"
                android:layout_width="match_parent"
                android:text="@string/show_details_summary"
                android:textColor="@color/default_textColor_third"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16.5dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/default_background_third"
                android:layout_marginTop="39dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/text_show_summary"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/default_textColor_fourth"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:paddingBottom="10dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_height="24dp"
                android:layout_width="match_parent"
                android:text="@string/show_details_genres"
                android:textColor="@color/default_textColor_third"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16.5dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/default_background_third"
                android:layout_marginTop="39dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/text_show_genres"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/default_textColor_fourth"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:paddingBottom="10dp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_height="24dp"
                android:layout_width="match_parent"
                android:text="@string/show_details_details"
                android:textColor="@color/default_textColor_third"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16.5dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/default_background_third"
                android:layout_marginTop="39dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/text_show_details_BroadCasting"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/default_textColor_fourth"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:paddingBottom="10dp"
                android:text="Broadcasting:"/>


            <TextView
                android:id="@+id/text_show_details_Status"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/default_textColor_fourth"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:paddingBottom="10dp"
                android:text="Status:"/>

            <TextView
                android:id="@+id/text_show_details_Seasons"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/default_textColor_fourth"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:paddingBottom="10dp"
                android:text="Seasons:"/>

            <TextView
                android:id="@+id/text_show_details_Started"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/default_textColor_fourth"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:paddingBottom="10dp"
                android:text="Started in:"/>

            <TextView
                android:id="@+id/text_show_details_Country"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/default_textColor_fourth"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:paddingBottom="10dp"
                android:text="Country: "/>

            <TextView
                android:id="@+id/text_show_details_HomePage"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/default_textColor_fourth"
                android:textSize="@dimen/default_textSize_medium"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:paddingBottom="10dp"
                android:text="HomePage: "/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>

</ScrollView>